--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 						<div class="row mb-3">
 							<div class="col">
 								<div class="input-group">
-									<input type="text" class="form-control" placeholder="Loại nhân viên"
-										id="searchName">
+									<input type="text" class="form-control" placeholder="Loại nhân viên" id="searchName"
+										onkeypress="handleSearchStudents(event)">
 									<div class="input-group-prepend">
 										<span class="input-group-text" id="btnTimNV"><i class="fa fa-search"></i></span>
 									</div>
